Fixed: CSS list was not aligned properly vertically
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/mnogosearch/trunk@14427 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -53,7 +53,6 @@ ol#tx-mnogosearch-result li h3 a {
 	padding: 0 0;
 	font-size: 90%;
 	color: #008000;
-	clear: left;
 }
 
 .tx-mnogosearch-relevancy-bg-bar {
